--- a/layout-challenges/frontend-mentor/newbie/1_social-links-profile-main/css/style.css
+++ b/layout-challenges/frontend-mentor/newbie/1_social-links-profile-main/css/style.css
@@ -13,6 +13,7 @@ body {
     margin: 100px auto;
     padding: 200px 16px;
     border-radius: 12px;
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
 }
 
 /* ==================== Card ==================== */
@@ -25,6 +26,8 @@ body {
 
     background-color: var(--color-grey-800);
     text-align: center;
+
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.35);
 }
 
 .avatar {
