--- a/layout-challenges/frontend-mentor/newbie/1_social-links-profile-main/css/style.css
+++ b/layout-challenges/frontend-mentor/newbie/1_social-links-profile-main/css/style.css
@@ -4,7 +4,10 @@
 
 body {
     color: var(--text-color);
-    background-color: var(--accent-color);
+    /* background-color: var(--accent-color); */
+    background-image: url(../assets/images/bgi.jpg);
+    background-position: center;
+    background-size: cover;
 }
 
 .container {
